--- a/hw1/word-alignment-HIT-template.html
+++ b/hw1/word-alignment-HIT-template.html
@@ -79,9 +79,9 @@ td.highlight  { background-color: #FF00FF; }
 	// read in the values for this sentence pair
  
 	// ${source} and ${target} should contain whitespace delimited words
-	var sourceString = "le juge en chef de la Cour fédérale et supérieur administratif de le juge Jerome a pris de les dispositions pour queM. Thompson le rencontre à son cabinet pour discuter davantage de la question .";
-	var targetString = "the chief justice of the federal court and Judge Jerome ' s administrative superior arranged for Mr. Thompson to meet with him in his chambers to discuss the matter further .";
-	var initialSureAlignments = "0-0 0-4 0-27 1-8 2-1 3-1 4-3 4-10 4-11 4-15 4-29 5-2 5-6 6-6 8-7 9-13 10-12 11-3 11-10 11-11 11-15 11-29 12-0 12-4 12-27 13-8 14-9 17-3 17-10 17-11 17-15 17-29 18-19 20-15 22-17 23-0 23-4 23-27 25-18 25-25 26-23 28-15 29-26 31-3 31-10 31-11 31-15 31-29 32-2 32-6 33-28 34-16 34-30 5-0 18-0 32-0 1-1 13-1 1-2 13-2 5-4 18-4 32-4 7-5 21-16 20-18 28-18 2-22 20-25 28-25 5-27 18-27 32-27";
+	var sourceString = "les gens de affaires de le Canada sont également toujours prêts à faire partie de le voyage .";
+	var targetString = "the business community of Canada is lining up to be on the trip .";
+	var initialSureAlignments = "0-1 2-3 2-7 4-3 4-7 5-0 5-4 5-11 6-4 11-8 14-3 14-7 15-0 15-4 15-11 16-12 17-13 0-0 3-1 12-8 0-11";
  
 	// sure alignments should have the format "0-0 0-1 1-2" where the first number 
 	// in each pair is the index of the source word, and the second it the target
